--- a/movie-app/src/templates/header.ejs
+++ b/movie-app/src/templates/header.ejs
@@ -6,11 +6,14 @@
   </div>
   <div class="header__search-form-container">
     <form class="search-form" action="#">
-      <input class="search-form__input" type="text" name="search" id="search" placeholder="Search for movies">
+      <input class="search-form__input" type="text" name="search" id="search" placeholder="Search for movies" autocomplete="off">
       <ul class="search-form__search-list">
 
       </ul>
-      <button class="search-form__button">
+      <button class="search-form__button search-form__button_clear search-form__button_hide" type="button">
+        <i class="fas fa-times"></i>
+      </button>
+      <button class="search-form__button search-form__button_submit">
         <i class="fas fa-search"></i>
       </button>
     </form>
