--- a/movie-app/src/styles/search-form.scss
+++ b/movie-app/src/styles/search-form.scss
@@ -5,23 +5,24 @@
   position: relative;
   height: var(--search-form-height);
 
+  
   &__input {
     width: 100%;
     height: 100%;
     border: none;
     outline: none;
     padding: 5px 10px;
-    padding-right: 30px;
+    padding-right: 58px;
     border-radius: 6px;
     font-size: 16px;
     line-height: 24px;
     color: var(--main-dark-color);
-    border: 2px solid var(--main-light-color);
+    border: 1px solid var(--main-light-color);
     transition: 0.2s;
   }
 
   &__input:focus {
-    box-shadow: 0px 0px 4px 2px var(--main-light-color);
+    box-shadow: 0px 0px 10px -5px var(--main-color);
   }
   
   &__search-list {
@@ -59,7 +60,6 @@
     outline: none;
     cursor: pointer;
     background: transparent;
-    margin-right: 10px;
     text-align: center;
     transition: 0.2s;
     position: absolute;
@@ -68,6 +68,18 @@
       width: 100%;
       height: 100%;
       object-fit: cover;
+    }
+
+    &_hide {
+      display: none;
+    }
+
+    &_clear {
+      right: 34px;
+    }
+
+    &_submit {
+      right: 10px;
     }
   }
   
