--- a/movie-app/src/styles/movie-card-full.scss
+++ b/movie-app/src/styles/movie-card-full.scss
@@ -6,11 +6,19 @@
   display: flex;
   overflow: hidden;
 
+  &__title-container {
+    position: relative;
+    width: calc(100% - 30px);
+    height: 38px;
+    margin-bottom: 10px;
+    overflow: hidden;
+  }
+
   &__title {
+    position: absolute;
     font-size: 23px;
     line-height: 38px;
-    margin-bottom: 10px;
-    padding-right: 30px;
+    white-space: nowrap;
   }
 
   &__info-block {
@@ -20,7 +28,23 @@
 
   &__content {
     overflow: auto;
-    height: 85%;
+    height: calc(100% - 48px);
+    padding-right: 10px;
+
+    &::-webkit-scrollbar {
+      width: 6px;
+    }
+     
+    &::-webkit-scrollbar-track {
+      // box-shadow: inset 0 0 6px rgba(0, 0, 0, 0.3);
+      background-color: var(--main-light-color);
+      border-radius: 3px;
+    }
+     
+    &::-webkit-scrollbar-thumb {
+      background-color: var(--main-color);
+      border-radius: 3px;
+    }
   }
 
   &__poster-container {
@@ -77,5 +101,4 @@
       }
     }
   }
-
 }
