--- a/movie-app/src/templates/movie-card-full.ejs
+++ b/movie-app/src/templates/movie-card-full.ejs
@@ -3,7 +3,9 @@
     <img class="movie-card-full__poster poster" src="<%= locals.Poster %>" alt="<%= locals.Title %>">
   </div>
   <div class="movie-card-full__info-block">
-    <h2 class="movie-card-full__title"><%= locals.Title %></h2>
+    <div class="movie-card-full__title-container">
+      <h2 class="movie-card-full__title"><%= locals.Title %></h2>
+    </div>
     <div class="movie-card-full__content">
       <div class="movie-card-full__row">
         <span class="movie-card-full__row-content"><%= locals.Plot %></span>
