--- a/movie-app/src/templates/movie-card-full.ejs
+++ b/movie-app/src/templates/movie-card-full.ejs
@@ -4,6 +4,7 @@
   </div>
   <div class="movie-card-full__info-block">
     <div class="movie-card-full__title-container">
+      <div class="movie-card-full__title-right-overlay"></div>
       <h2 class="movie-card-full__title"><%= locals.Title %></h2>
     </div>
     <div class="movie-card-full__content">
