--- a/movie-app/src/styles/search-form.scss
+++ b/movie-app/src/styles/search-form.scss
@@ -5,7 +5,6 @@
   position: relative;
   height: var(--search-form-height);
 
-  
   &__input {
     width: 100%;
     height: 100%;
@@ -54,6 +53,7 @@
   }
 
   &__button {
+    position: absolute;
     width: 14px;
     height: 14px;
     border: none;
@@ -62,13 +62,6 @@
     background: transparent;
     text-align: center;
     transition: 0.2s;
-    position: absolute;
-
-    img {
-      width: 100%;
-      height: 100%;
-      object-fit: cover;
-    }
 
     &_hide {
       display: none;
@@ -81,14 +74,14 @@
     &_submit {
       right: 10px;
     }
-  }
-  
-  &__button:hover {
-    color: var(--light-text-color);
-  }
 
-  &__button-icon {
-    width: 20px;
-    height: 20px;
+    &:active {
+      color: tomato;
+      transform: translate3d(1px, 1px, 0);
+    }
+
+    &:hover {
+      color: var(--light-text-color);
+    }
   }
 }
